# fluxlang

./: .gitignore  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LANGUAGE_DESIGN.md  MIGRATION_NOTES.md  MIGRATION_SUMMARY.md  README.md  STDLIB_IMPLEMENTATION.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/flux-cli/: Cargo.toml
crates/flux-cli/src/: main.rs
crates/flux-errors/: Cargo.toml
crates/flux-errors/src/: lib.rs
crates/flux-lsp/: Cargo.toml
crates/flux-lsp/src/: main.rs
crates/flux-sema/: Cargo.toml
crates/flux-sema/src/: checker.rs  lib.rs  symbol.rs  types.rs  vfs.rs
crates/flux-syntax/: Cargo.toml
crates/flux-syntax/src/: ast.rs  lexer.rs  parser.rs
crates/flux-syntax/tests/: parser_tests.rs
crates/flux-syntax/tests/snapshots/: parser_tests__parse_block.snap  parser_tests__parse_bool_float_literals.snap  parser_tests__parse_bool_float_types.snap  parser_tests__parse_complex_pipeline.snap  parser_tests__parse_function_call.snap  parser_tests__parse_import_statement.snap  parser_tests__parse_label_literals.snap  parser_tests__parse_let_binding.snap  parser_tests__parse_nested_expressions.snap  parser_tests__parse_pipeline_operator.snap  parser_tests__parse_plan_skeleton.snap  parser_tests__parse_simple_function.snap  parser_tests__parse_table_type.snap  parser_tests__parse_temporal_types_date.snap  parser_tests__parse_temporal_types_datetime.snap  parser_tests__parse_temporal_types_duration.snap  parser_tests__parse_temporal_types_table.snap  parser_tests__parse_temporal_types_time.snap  parser_tests__parse_temporal_types_timestamp.snap
crates/flux-wasm/: Cargo.toml
crates/flux-wasm/src/: codegen.rs
crates/flux-wasm/tests/: builtin_functions.rs  integration_tests.rs  user_function_calls.rs
crates/flux-wasm/wit/: flux.wit
editors/vscode/: package.json
editors/vscode/src/: extension.ts
editors/vscode/src/test/: client-test.js
editors/vscode/syntaxes/: flux.tmLanguage.json
examples/: let_binding.flux  plan.flux  simple.flux  type_error.flux
wit/: stdlib-io.wit  stdlib-math.wit  stdlib-temporal.wit  stdlib-world.wit
