[workspace]
resolver = "2"
members = [
    "crates/flux-syntax",
    "crates/flux-errors",
    "crates/flux-sema",
    "crates/flux-wasm",
    "crates/flux-lsp",
    "crates/flux-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Thomas Payne"]

[workspace.dependencies]
# Parser and syntax
logos = "0.14"
rowan = "0.15"
insta = "1.39"

# Error handling
miette = { version = "7.2", features = ["fancy"] }
thiserror = "1.0"

# LSP
tower-lsp = "0.20"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM
wasm-encoder = "0.220"
wasmtime = "26.0"
wat = "1.220"

# Salsa-like incremental computation
salsa = "0.16"

# Utilities
dashmap = "6.0"
parking_lot = "0.12"
