[package]
name = "flux-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "flux"
path = "src/main.rs"

[dependencies]
flux-syntax = { path = "../flux-syntax" }
flux-wasm = { path = "../flux-wasm" }
flux-errors = { path = "../flux-errors" }
miette.workspace = true
